--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.8.3",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
