--- a/.github/workflows/projects-ci-cd.yml
+++ b/.github/workflows/projects-ci-cd.yml
@@ -14,12 +14,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Use Node.js
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
       - name: Cache dependencies
-      - uses: actions/cache@v4
+        uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -36,7 +36,7 @@ jobs:
         run: npm run build
 
       - name: Upload artifact
-      - uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: dist
@@ -47,10 +47,10 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Download artifact
-        uses: actions/download-artifact@v3.1.2
+        uses: actions/download-artifact@v4
         with:
           name: build
           path: dist
